[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/godot-xr-tools/functions/movement_grapple.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-xr-tools/materials/pointer.tres" type="Material" id=2]

[sub_resource type="CubeMesh" id=1]
resource_local_to_scene = true
size = Vector3( 0.05, 0.05, 0.05 )
subdivide_depth = 20

[node name="MovementGrapple" type="Spatial" groups=["movement_providers"]]
script = ExtResource( 1 )

[node name="Grapple_RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -15 )
collision_mask = 3
debug_shape_custom_color = Color( 0.862745, 0.278431, 0.278431, 1 )
debug_shape_thickness = 1

[node name="Grapple_Target" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="LineHelper" type="Spatial" parent="."]

[node name="Line" type="CSGCylinder" parent="LineHelper"]
transform = Transform( 1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, 0 )
radius = 0.02
